# penny-knowledge-core

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  PRD.md  README.md  SECURITY.md  pyproject.toml
.chainlit/: config.toml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.mock  Dockerfile.ui  docker-compose.dev.yml  docker-compose.yml  mock_heart.py
scripts/: demo_ontology.py  ping_fleet.py
src/penny_knowledge_core/: __init__.py  config.py  logging.py
src/penny_knowledge_core/router/: __init__.py  context.py  fleet.py
src/penny_knowledge_core/schemas/: __init__.py  anytype.py  manifest.py  tools.py
src/penny_knowledge_core/server/: __init__.py  main.py
src/penny_knowledge_core/tools/: __init__.py  composite.py  primitive.py  profile.py
src/penny_knowledge_core/ui/: __init__.py  agent.py  app.py  handlers.py
tests/: __init__.py  conftest.py  test_config.py  test_router.py  test_schemas.py  test_server.py  test_tools.py
