[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "penny-knowledge-core"
version = "0.1.0"
description = "Persistent Memory and Ontological Architect for the PENNY ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "PENNY Team" }
]
keywords = ["mcp", "anytype", "knowledge-graph", "agent", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "sse-starlette>=2.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "redis>=5.0.0",
    "asyncio-throttle>=1.0.0",
    # Phase 4: Chainlit UI
    "chainlit>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.2.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx[http2]>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
penny-gateway = "penny_knowledge_core.server.main:main"
penny-ui = "penny_knowledge_core.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/penny_knowledge_core"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["penny_knowledge_core"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/penny_knowledge_core --cov-report=term-missing"
